--- a/kiki_web/lib/l10n/app_zh.arb
+++ b/kiki_web/lib/l10n/app_zh.arb
@@ -28,5 +28,39 @@
   "send": "发送",
   "chat": "聊天",
   "message": "消息",
-  "typeMessage": "输入消息..."
+  "typeMessage": "输入消息...",
+  "phoneNumber": "手机号",
+  "welcomeBack": "欢迎回来",
+  "pleaseLoginToAccount": "请登录您的账户",
+  "notLoggedIn": "未登录",
+  "clickToLogin": "点击登录",
+  "learningStats": "学习统计",
+  "viewProgressAndAchievements": "查看学习进度和成就",
+  "featureTip": "功能提示",
+  "learningStatsInDevelopment": "学习统计功能正在开发中",
+  "favorites": "收藏夹",
+  "manageFavoriteWords": "管理收藏的生词",
+  "favoritesInDevelopment": "收藏夹功能正在开发中",
+  "learningHistory": "学习历史",
+  "viewLearningRecords": "查看学习记录",
+  "learningHistoryInDevelopment": "学习历史功能正在开发中",
+  "personalPreferences": "个人偏好设置",
+  "helpAndFeedback": "帮助与反馈",
+  "getHelpOrProvideFeedback": "获取帮助或提供反馈",
+  "helpInDevelopment": "帮助功能正在开发中",
+  "about": "关于",
+  "versionInfo": "版本信息",
+  "logOut": "退出登录",
+  "safelyExitApp": "安全退出应用",
+  "close": "关闭",
+  "groundedTheory": "扎根理论",
+  "version100": "版本 1.0.0",
+  "appDescription": "一个简单易用的生词学习应用，帮助你轻松掌握新词汇。",
+  "confirmExit": "确认退出",
+  "confirmLogoutMessage": "确定要退出登录吗？",
+  "exit": "退出",
+  "darkMode": "深色模式",
+  "pushNotifications": "推送通知",
+  "quickSwitch": "快速切换",
+  "featureDemo": "功能演示"
 }
