--- a/kiki_web/lib/l10n/app_zh_TW.arb
+++ b/kiki_web/lib/l10n/app_zh_TW.arb
@@ -28,5 +28,39 @@
   "send": "傳送",
   "chat": "聊天",
   "message": "訊息",
-  "typeMessage": "輸入訊息..."
+  "typeMessage": "輸入訊息...",
+  "phoneNumber": "手機號",
+  "welcomeBack": "歡迎回來",
+  "pleaseLoginToAccount": "請登入您的帳戶",
+  "notLoggedIn": "未登入",
+  "clickToLogin": "點擊登入",
+  "learningStats": "學習統計",
+  "viewProgressAndAchievements": "查看學習進度和成就",
+  "featureTip": "功能提示",
+  "learningStatsInDevelopment": "學習統計功能正在開發中",
+  "favorites": "收藏夾",
+  "manageFavoriteWords": "管理收藏的生詞",
+  "favoritesInDevelopment": "收藏夾功能正在開發中",
+  "learningHistory": "學習歷史",
+  "viewLearningRecords": "查看學習記錄",
+  "learningHistoryInDevelopment": "學習歷史功能正在開發中",
+  "personalPreferences": "個人偏好設定",
+  "helpAndFeedback": "幫助與反饋",
+  "getHelpOrProvideFeedback": "獲取幫助或提供反饋",
+  "helpInDevelopment": "幫助功能正在開發中",
+  "about": "關於",
+  "versionInfo": "版本資訊",
+  "logOut": "登出",
+  "safelyExitApp": "安全退出應用",
+  "close": "關閉",
+  "groundedTheory": "扎根理論",
+  "version100": "版本 1.0.0",
+  "appDescription": "一個簡單易用的生詞學習應用，幫助你輕鬆掌握新詞彙。",
+  "confirmExit": "確認退出",
+  "confirmLogoutMessage": "確定要登出嗎？",
+  "exit": "退出",
+  "darkMode": "深色模式",
+  "pushNotifications": "推送通知",
+  "quickSwitch": "快速切換",
+  "featureDemo": "功能演示"
 }
