完善国际化：修复custom_button.dart的加载中文本

--- a/kiki_web/lib/l10n/app_en.arb
+++ b/kiki_web/lib/l10n/app_en.arb
@@ -32,6 +32,14 @@
   "@confirmPassword": {
     "description": "Confirm password field label"
   },
+  "noAccountYet": "Don't have an account yet?",
+  "@noAccountYet": {
+    "description": "Text asking if user doesn't have account"
+  },
+  "loading": "Loading...",
+  "@loading": {
+    "description": "Loading indicator text"
+  },
   "username": "Username",
   "@username": {
     "description": "Username field label"
