--- a/kiki_web/lib/l10n/app_zh_TW.arb
+++ b/kiki_web/lib/l10n/app_zh_TW.arb
@@ -8,6 +8,8 @@
   "email": "電子郵件",
   "password": "密碼",
   "confirmPassword": "確認密碼",
+  "noAccountYet": "還沒有帳戶？",
+  "loading": "載入中...",
   "username": "用戶名",
   "home": "首頁",
   "profile": "個人資料",
