完善国际化：修复liquid_confirm_dialog.dart的确认和取消按钮文本

--- a/kiki_web/lib/l10n/app_en.arb
+++ b/kiki_web/lib/l10n/app_en.arb
@@ -40,6 +40,10 @@
   "@loading": {
     "description": "Loading indicator text"
   },
+  "confirm": "Confirm",
+  "@confirm": {
+    "description": "Confirm button text"
+  },
   "username": "Username",
   "@username": {
     "description": "Username field label"
