--- a/kiki_web/lib/l10n/app_zh_TW.arb
+++ b/kiki_web/lib/l10n/app_zh_TW.arb
@@ -10,6 +10,7 @@
   "confirmPassword": "確認密碼",
   "noAccountYet": "還沒有帳戶？",
   "loading": "載入中...",
+  "confirm": "確認",
   "username": "用戶名",
   "home": "首頁",
   "profile": "個人資料",
