--- a/kiki_web/lib/l10n/app_zh.arb
+++ b/kiki_web/lib/l10n/app_zh.arb
@@ -10,6 +10,7 @@
   "confirmPassword": "确认密码",
   "noAccountYet": "还没有账户？",
   "loading": "加载中...",
+  "confirm": "确认",
   "username": "用户名",
   "home": "首页",
   "profile": "个人资料",
