--- a/kiki_web/doc/framework/新功能开发指南标准_20250916.md
+++ b/kiki_web/doc/framework/新功能开发指南标准_20250916.md
@@ -127,12 +127,14 @@ Future<void> someAction() async {
 登录功能拆解（每一步都应映射到相应文件与职责）：
 1. UI 层：`presentation/pages/login_page.dart`（表单、错误展示、loading 状态、导航）
 2. Controller：`presentation/controllers/auth_controller.dart`（表单校验、本地状态、调用 Repository）
-3. Repository：`data/repositories/auth_repository.dart`（封装 RequestManager 调用，返回实体/错误）
-4. Entity：`data/domain/entities/user.dart`（用户实体定义）
+3. Repository（Domain 接口）：`domain/repositories/i_auth_repository.dart`（声明领域接口，供上层依赖）
+4. Repository（Data 实现）：`data/repositories/auth_repository_impl.dart`（封装 RequestManager 调用，实现接口）
+5. Entity：`domain/entities/user.dart`（用户实体定义）
 5. API 定义：`lib/config/api_endpoints.dart`（定义登录 path）
 6. RequestManager：统一发送请求，处理 token、错误转换、网络重试策略
-7. 路由：`lib/app_routes.dart` + `lib/app_constants.dart`（添加登录页面路由）
-8. 全局样式：使用 `AppColors` 中定义的颜色
+7. 依赖管理：`core/di/service_locator.dart` + `core/services/app_services.dart`（提供接口实例、支持测试替换）
+8. 路由：`lib/app_routes.dart` + `lib/app_constants.dart`（添加登录页面路由）
+9. 全局样式：使用 `AppColors` 中定义的颜色
 
 每一个新功能应复制以上责任边界，并替换为对应的业务名。
 
@@ -146,12 +148,14 @@ Future<void> someAction() async {
       - feature_x_page.dart
     - controllers/
       - feature_x_controller.dart
-  - data/
-    - domain/
-      - entities/
-        - feature_x_entity.dart
+  - domain/
+    - entities/
+      - feature_x_entity.dart
     - repositories/
-      - feature_x_repository.dart
+      - i_feature_x_repository.dart
+  - data/
+    - repositories/
+      - feature_x_repository_impl.dart
   - config/
     - api_endpoints.dart (已存在，新增 path 常量)
   - ...
@@ -162,10 +166,10 @@ Future<void> someAction() async {
 
 步骤 0：准备
 - 目的：确认 API path，实体字段，UI 字段。
-- 操作：在 `ApiEndpoints` 中新增 `featureX` path；在 `data/domain/entities/` 新建实体草稿。
+- 操作：在 `ApiEndpoints` 中新增 `featureX` path；在 `domain/entities/` 新建实体草稿。
 
 步骤 1：创建实体
-- 文件：`data/domain/entities/feature_x_entity.dart`
+- 文件：`domain/entities/feature_x_entity.dart`
 - 伪代码：
   class FeatureXEntity {
     final String id;
@@ -174,14 +178,18 @@ Future<void> someAction() async {
   }
 - 关注点：字段校验、nullable vs non-nullable
 
-步骤 2：实现 Repository
-- 文件：`data/repositories/feature_x_repository.dart`
-- 目的：封装 RequestManager 调用，返回 Entity 或抛出统一异常
+步骤 2：定义 Repository 接口 + 实现
+- Domain 接口文件：`domain/repositories/i_feature_x_repository.dart`
+- Data 实现文件：`data/repositories/feature_x_repository_impl.dart`
+- 目的：在领域层暴露稳定接口，在数据层封装 RequestManager 调用，返回 Entity 或抛出统一异常
 - **必须使用统一异常系统**：
 ```dart
-class FeatureXRepository {
-  final RequestManager _requestManager;
-  FeatureXRepository(this._requestManager);
+abstract class IFeatureXRepository {
+  Future<FeatureXEntity> createFeatureX(CreateFeatureXParams params);
+}
+
+class FeatureXRepositoryImpl implements IFeatureXRepository {
+  final RequestManager _requestManager = RequestManager.instance;
 
   Future<FeatureXEntity> createFeatureX(CreateFeatureXParams params) async {
     try {
@@ -209,19 +217,22 @@ class FeatureXRepository {
   - **网络错误**：使用 `ApiResponseHandler.createException()` 统一转换
   - **成功响应**：使用 `ApiResponseHandler.handle<T>()` 自动提取 `data` 字段
 
-步骤 3：实现 Controller（Getx）
+- 依赖管理：在 `ServiceLocator` 或 `AppServices.setFeatureXRepository` 中注册 `IFeatureXRepository` 的默认实现，方便测试替代
+
+-步骤 3：实现 Controller（Getx）
 - 文件：`presentation/controllers/feature_x_controller.dart`
-- 目的：持有表单状态、loading、错误信息；调用 Repository；路由导航
+- 目的：持有表单状态、loading、错误信息；调用 Repository 接口；路由导航。默认从 ServiceLocator/AppServices 获取依赖，测试时可通过构造函数注入 mock。
 - 伪代码：
   class FeatureXController extends GetxController {
-    final FeatureXRepository repo;
+    final IFeatureXRepository repo;
     var isLoading = false.obs;
     var errorMsg = ''.obs;
 
     final formKey = GlobalKey<FormState>();
     final nameController = TextEditingController();
 
-    FeatureXController(this.repo);
+    FeatureXController({IFeatureXRepository? repository})
+        : repo = repository ?? ServiceLocator.instance.featureXRepository;
 
     Future<void> submit() async {
       if (!formKey.currentState!.validate()) return;
@@ -255,13 +266,14 @@ class FeatureXRepository {
     }
   }
 - 关注点：取消订阅、资源释放（onClose 清理 controllers）
+- 导入：`import '../../core/di/service_locator.dart';`、`import '../../domain/repositories/i_feature_x_repository.dart';`
 
 步骤 4：实现 UI Page
 - 文件：`presentation/pages/feature_x_page.dart`
 - 目的：表单 UI，使用 controller 中的 observable 状态
 - 伪代码：
   class FeatureXPage extends StatelessWidget {
-    final controller = Get.put(FeatureXController(Get.find()));
+    final controller = Get.put(FeatureXController());
     Widget build(...) {
       return Scaffold(
         body: Form(...)
@@ -272,15 +284,19 @@ class FeatureXRepository {
   }
 - 关注点：保持与登录页面一致的 UX 结构（按钮样式、表单校验）
 
-步骤 5：路由与常量
+步骤 5：依赖注册
+- 在 `ServiceLocator` 中提供 `IFeatureXRepository` 默认实现，并在测试场景允许替换
+- 如需全局访问，可在 `AppServices` 中添加对应的 setter/getter
+
+步骤 6：路由与常量
 - 在 `AppConstants` 中添加 path: `/feature_x`
 - 在 `AppRoutes` 初始化中注册该路由指向 `FeatureXPage`
 
-步骤 6：样式与颜色
+步骤 7：样式与颜色
 - 如果需要新颜色，先在 `AppColors` 中添加常量；UI 使用 `AppColors.primary` 而非硬编码色值
 
-步骤 7：单元与集成测试
-- Controller：测试 submit 成功/失败，mock Repository 返回
+步骤 8：单元与集成测试
+- Controller：测试 submit 成功/失败，mock `IFeatureXRepository` 返回
 - Repository：对 RequestManager 进行 mock，测试不同响应码的行为
 - UI：Widget test 验证表单校验和状态展示
 
@@ -359,8 +375,10 @@ Future<FeatureXEntity> createFeatureX(CreateFeatureXParams params) async {
 - [ ] **Repository 层是否正确使用 `ApiResponseHandler.handle<T>()` 处理响应**
 - [ ] **Controller 层是否正确捕获 `ApiResponseException` 并显示具体错误信息**
 - [ ] Controller 是否使用 GetX，并放在模块的 `controllers/`
-- [ ] 实体是否放在 `data/domain/entities/`
-- [ ] Repository 是否在 `data/repositories/`
+- [ ] 实体是否放在 `domain/entities/`
+- [ ] 领域接口是否定义在 `domain/repositories/` 并供上层依赖
+- [ ] 数据实现是否在 `data/repositories/`（建议以 `_impl` 结尾）并实现领域接口
+- [ ] 是否在 `ServiceLocator` / `AppServices` 中注册或覆盖默认实现以便测试
 - [ ] 所有 API path 是否在 `ApiEndpoints` 中定义
 - [ ] 颜色是否来自 `AppColors`
 - [ ] 路由是否在 `AppRoutes` 和 `AppConstants` 中注册
@@ -374,8 +392,12 @@ Future<FeatureXEntity> createFeatureX(CreateFeatureXParams params) async {
 static const resetPassword = '/auth/reset-password';
 ```
 
-2. 实体：`data/domain/entities/reset_password_response.dart`
-3. Repository：`data/repositories/auth_repository.dart` 添加方法：
+2. 实体：`domain/entities/reset_password_response.dart`
+3. 领域接口：`domain/repositories/i_auth_repository.dart` 添加方法声明：
+```dart
+Future<void> resetPassword(String phoneOrEmail);
+```
+4. 数据实现：`data/repositories/auth_repository_impl.dart` 添加方法：
 ```dart
 Future<void> resetPassword(String phoneOrEmail) async {
   try {
@@ -397,15 +419,15 @@ Future<void> resetPassword(String phoneOrEmail) async {
 }
 ```
 
-4. Controller：`presentation/controllers/auth_controller.dart` 添加 `resetPasswordController`、方法 `resetPassword()`，复用表单逻辑和 loading/error 处理
-5. Page：`presentation/pages/reset_password_page.dart`，复用 login_page 的样式和结构
-6. 路由：`AppConstants` + `AppRoutes` 注册
-7. 测试：参考步骤 6
+5. Controller：`presentation/controllers/auth_controller.dart` 添加 `resetPasswordController`、方法 `resetPassword()`，复用表单逻辑和 loading/error 处理
+6. Page：`presentation/pages/reset_password_page.dart`，复用 login_page 的样式和结构
+7. 路由：`AppConstants` + `AppRoutes` 注册
+8. 测试：参考步骤 6
 
 ---
 
 完成说明：
-- 将该文档作为团队新功能开发的“模板/规范/执行脚本”保存于 `doc/task/新功能开发指南.md`。
+- 将该文档作为团队新功能开发的“模板/规范/执行脚本”保存于 `doc/framework/新功能开发指南标准_20250916.md`。
 - 任何新功能均应根据本指南逐步执行，AI 可根据本指南生成相应的代码骨架与实现。
 
 如需，我可以：
